fixed radio button alignment in workout builder

--- a/src/components/shared/ExerciseTypeBuilder/ExerciseTypeBuilder.scss
+++ b/src/components/shared/ExerciseTypeBuilder/ExerciseTypeBuilder.scss
@@ -12,6 +12,7 @@
     padding: 35px 0 20px;
   }
   .radio-btn-container {
+    display: flex;
     margin-bottom: 1.2rem;
   }
   .exercise-description {
@@ -40,3 +41,17 @@
 .exerciseType4 {
   @include exercise-colors($brand-pink, $brand-blue);
 }
+
+@media only screen 
+  and (max-width: 812px) {
+    .radio-btn-container {
+      justify-content: flex-start;
+    }
+  }
+
+@media only screen 
+  and (min-width: 812px) {
+    .radio-btn-container {
+      justify-content: space-around;
+    }
+  }
